# Apriltag_Relocalizer

./: AprilTag_RelocalizerREADME.md  README.md
apriltag_docking_bridge/: CMakeLists.txt  package.xml
apriltag_docking_bridge/src/: detected_dock_pose_publisher.cpp
apriltag_relocalizer/: CMakeLists.txt  package.xml
apriltag_relocalizer/config/: tags.yaml
apriltag_relocalizer/include/apriltag_relocalizer/: apriltag_relocalizer.hpp
apriltag_relocalizer/launch/: apriltag_relocalizer.launch.py  relocalizer_launch.xml
apriltag_relocalizer/src/: apriltag_relocalizer.cpp
apriltag_ros/cfg/: tags_36h11.yaml
apriltag_ros/launch/: docking_demo.launch.py
